# The-Chinar-Engine

./: CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp
chinar/: coordinator.h  engine.cpp  engine.h  signature.h  util.h
chinar/component/: color.h  component.h  componentArray.h  componentManager.h  event.h  rigidBody.h  scale.h  shape.h  size.h  sprite.h  transform.h
chinar/entity/: entity.h  entityManager.cpp  entityManager.h
chinar/event/: eventHandlerSystem.h
chinar/initializationSystem/: spriteLoader.h
chinar/maths/: vec.h
chinar/physics/: physicsSystem.h
chinar/rendererSystem/: rendererSystem.cpp  rendererSystem.h  spriteRenderer.cpp  spriteRenderer.h
chinar/system/: system.h  systemManager.cpp  systemManager.h
chinar/window/: window.h
examples/: CMakeLists.txt  box.cpp
